@startuml

title __MODEL's Class Diagram__\n

  namespace wasteless.server {
    namespace model {
      class wasteless.server.model.GroceryList {
          - groceryItems : List<Item>
          - groceryListName : String
          - id : Long
          + GroceryList()
          + GroceryList()
          + addGroceryItem()
          + getGroceryItems()
          + getGroceryListName()
          + getId()
          + getUser()
          + setGroceryItems()
          + setGroceryListName()
          + setId()
          + setUser()
          + toString()
      }
    }
  }
  

  namespace wasteless.server {
    namespace model {
      class wasteless.server.model.Item {
          - calorieValue : Float
          - consumptionDate : LocalDate
          - expirationDate : LocalDate
          - id : Long
          - itemName : String
          - purchaseDate : LocalDate
          - quantity : Float
          + getCalorieValue()
          + getConsumptionDate()
          + getDaysUntilExpiration()
          + getExpirationDate()
          + getGroceryList()
          + getId()
          + getItemName()
          + getPurchaseDate()
          + getQuantity()
          + isAlreadyExpired()
          + setCalorieValue()
          + setConsumptionDate()
          + setExpirationDate()
          + setGroceryList()
          + setId()
          + setItemName()
          + setPurchaseDate()
          + setQuantity()
      }
    }
  }
  

  namespace wasteless.server {
    namespace model {
      class wasteless.server.model.User {
          - active : boolean
          - emailAddress : String
          - firstName : String
          - groceryLists : List<GroceryList>
          - id : long
          - lastName : String
          - password : String
          + getEmailAddress()
          + getFirstName()
          + getGroceryLists()
          + getId()
          + getLastName()
          + getPassword()
          + isActive()
          + setActive()
          + setEmailAddress()
          + setFirstName()
          + setGroceryLists()
          + setId()
          + setLastName()
          + setPassword()
          + toString()
      }
    }
  }
  

  wasteless.server.model.GroceryList o-- wasteless.server.model.User : user
  wasteless.server.model.Item o-- wasteless.server.model.GroceryList : groceryList


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
